--- a/styles.css
+++ b/styles.css
@@ -4,74 +4,101 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #fffbf2;
+    background-color: black;
 }
 h1{
-  font-size: 32px;
+  font-size: 45px;
   line-height: 20px;
   font-weight: 600;
-  color: #282828;
+  
+  text-align: center;
+  letter-spacing: -3px;
 
 }
 
 h2{
-  font-size: 14px;
+  font-size: 45px;
+  font-style: italic;
   line-height: 20px;
-  font-weight: 600;
-  color: #282828;
+  font-weight: 300;
+  
+  text-align: center;
+  letter-spacing: -3px;
 
 
 }
 
 p{
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #282828;
+  font-size: 45px;
+  line-height: 30px;
+  font-weight: 300;
+  
+  text-align: center;
+  letter-spacing: -3px;
+}
+h2, h1, p {
+    color: white;
 }
 
 a {
   font-family: helvetica, sans-serif;
     text-decoration: none;
-    color: #333;
+    font-size: 45px;
+  line-height: 30px;
+  font-weight: 300;
+  
+  text-align: center;
+  letter-spacing: -3px;
 }
+a.text{
+    font-family: helvetica, sans-serif;
+    font-size: 30px;
+    line-height: 50px;
+    font-weight: 300;
+    text-align: left;
+    letter-spacing: -3px;
+    color: #fff;
+
+  }
+  
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+.descripcion {
+    
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 /* Header Styles */
 .header {
     text-align: center;
     padding: 20px;
-    background-color: #fffbf2;
+    background-color: black;
 }
 
-.logo {
-    max-width: 40%;
-    height: auto;
-}
-.logo-main {
-    max-width: 70%;
-    height: auto;
-}
 
 
 .menu ul {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin-top: 20px;
 }
 
 .menu ul li {
-    margin: 0 210px;
+    margin: 0 ;
 }
 
 .menu ul li a {
-    font-weight: bold;
-    font-size: 22px;
+    font-weight: 300;
+    font-size: 40px;
+    letter-spacing: -3px;
+    color: #fff;
 }
 
 /* Main Content Styles */
@@ -84,6 +111,8 @@ ul {
 .photo-column {
     flex: 1;
     margin: 0 10px;
+    max-width: 90%;
+    
 }
 
 .photo-column img {
@@ -124,6 +153,30 @@ ul {
 
 /* Responsive Styles */
 @media (max-width: 768px) {
+    .menu ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .photo-column {
+        margin-bottom: 20px;
+    }
+    .logo {
+        max-width: 95%;
+        height: auto;
+    }
+    .logo-main {
+        max-width: 95%;
+        height: auto;
+    }
+}
+
+@media (max-width: 490px) {
     .menu ul {
         flex-direction: column;
         align-items: center;
