--- a/styleshop.css
+++ b/styleshop.css
@@ -5,13 +5,13 @@ body {
     padding: 0;
     box-sizing: border-box;
     text-align: left;
-    background-color: #fffbf2;
+    background-color: black;
 }
 h1{
   font-size: 20px;
   line-height: 20px;
   font-weight: 600;
-  color: #282828;
+  color: white;
 
 }
 
@@ -19,7 +19,7 @@ h2{
   font-size: 14px;
   line-height: 20px;
   font-weight: 600;
-  color: #282828;
+  color: #fff;
 
 
 }
@@ -28,20 +28,20 @@ p{
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
-  color: #282828;
+  color: #fff;
 }
 
 a {
   font-family: helvetica, sans-serif;
     text-decoration: none;
-    color: #333;
+    color: #fff;
 }
 a.comprar {
   font-family: helvetica, sans-serif;
   font-size: 16px;
   line-height: 20px;
   font-weight: 600;
-  color: #282828;
+  color: #fff;
 
 
 }
@@ -57,7 +57,7 @@ ul {
 .header {
     text-align: center;
     padding: 20px;
-    background-color: #fffbf2;
+    background-color: #black;
 }
 
 .logo {
@@ -71,17 +71,19 @@ ul {
 
 .menu ul {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin-top: 20px;
 }
 
 .menu ul li {
-    margin: 0 210px;
+    margin: 0 ;
 }
 
 .menu ul li a {
-    font-weight: bold;
-    font-size: 22px;
+    font-weight: 300;
+    font-size: 40px;
+    letter-spacing: -3px;
+    color: #fff;
 }
 
 /* Main Content Styles */
