--- a/styles.css
+++ b/styles.css
@@ -185,17 +185,64 @@ ul {
     .main-content {
         flex-direction: column;
         align-items: center;
+        max-width: 95%;
+        margin: 10px;
+        padding: 10px;
     }
 
     .photo-column {
         margin-bottom: 20px;
+        margin: 10px;
+        max-width: 100%;
     }
-    .logo {
-        max-width: 95%;
-        height: auto;
+   
+    
+    .photo-column img {
+        width: 100%;
+        margin-bottom: 20px;
+        border-radius: 5px;
     }
-    .logo-main {
-        max-width: 95%;
-        height: auto;
-    }
+
+    h1{
+        font-size: 45px;
+        line-height: 30px;
+        font-weight: 300;
+        
+        text-align: center;
+        letter-spacing: -3px;
+      
+      }
+      
+      h2{
+        font-size: 40px;
+        font-style: italic;
+        line-height: 20px;
+        font-weight: 300;
+        text-align: center;
+        letter-spacing: -3px;
+      
+      }
+      
+      p{
+        font-size: 25px;
+        line-height: 30px;
+        font-weight: 300;
+    
+        text-align: center;
+        letter-spacing: -3px;
+      }
+      h2, h1, p {
+          color: white;
+      }
+      
+      
+      a.text{
+        font-size: 25px;
+        line-height: 30px;
+        font-weight: 300;
+    
+        text-align: center;
+        letter-spacing: -3px;
+      
+        }
 }
