--- a/styleabout.css
+++ b/styleabout.css
@@ -60,6 +60,16 @@ a.text{
     letter-spacing: -3px;
     color: #fff;
   }
+
+  a.vigas{
+    font-family: helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 10px;
+    font-weight: 500;
+    text-align: left;
+    letter-spacing: -1px;
+    color: #fff;
+  }
   
 ul {
     list-style-type: none;
@@ -212,4 +222,13 @@ ul {
         letter-spacing: -3px;
       
         }
+        a.vigas{
+            font-family: helvetica, sans-serif;
+            font-size: 14px;
+            line-height: 10px;
+            font-weight: 500;
+            text-align: left;
+            letter-spacing: -1px;
+            color: #fff;
+          }
 }
